--- a/NLP_Review_Analysis_Pipeline.ipynb
+++ b/NLP_Review_Analysis_Pipeline.ipynb
@@ -1049,30 +1049,33 @@
         "id": "4beNMW8tBuyw"
       }
     },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Exemplo 1\n",
-        "texto = ['Gostei muito, indico.']\n",
-        "texto_vet = vetorizador.transform(texto)\n",
-        "print(\"Predição:\", modelo.predict(texto_vet)[0])\n",
-        "\n",
-        "# Exemplo 2\n",
-        "texto = ['Até que é bom.']\n",
-        "texto_vet = vetorizador.transform(texto)\n",
-        "print(\"Predição:\", modelo.predict(texto_vet)[0])\n",
-        "\n",
-        "# Exemplo 3\n",
-        "texto = ['Péssimo produto, odiei o cheiro.']\n",
-        "texto_vet = vetorizador.transform(texto)\n",
-        "print(\"Predição:\", modelo.predict(texto_vet)[0])"
-      ],
-      "metadata": {
-        "id": "RXsB6d0GBypM"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
+{
+  "cell_type": "code",
+  "source": [
+    "# Exemplo 1\n",
+    "texto = ['Gostei muito, indico.']\n",
+    "texto_vet = vetorizador.transform(texto)\n",
+    "print(\"Predição:\", modelo.predict(texto_vet)[0])\n",
+    "# Saída esperada: Predição: positivo\n",
+    "\n",
+    "# Exemplo 2\n",
+    "texto = ['Até que é bom.']\n",
+    "texto_vet = vetorizador.transform(texto)\n",
+    "print(\"Predição:\", modelo.predict(texto_vet)[0])\n",
+    "# Saída esperada: Predição: neutro\n",
+    "\n",
+    "# Exemplo 3\n",
+    "texto = ['Péssimo produto, odiei o cheiro.']\n",
+    "texto_vet = vetorizador.transform(texto)\n",
+    "print(\"Predição:\", modelo.predict(texto_vet)[0])\n",
+    "# Saída esperada: Predição: negativo\n"
+  ],
+  "metadata": {
+    "id": "RXsB6d0GBypM"
+  },
+  "execution_count": null,
+  "outputs": []
+}
     {
       "cell_type": "markdown",
       "source": [
